@@ -1,4 +1,5 @@
 0.32 (in development):
+	* Bug with status update with shortened link appears shortened at the timeline top is fixes (#81)
 
 0.31:
 	+ Links shortening for long tweets (#14)
